fix: add correct html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
 
-    <title>Denis Trukhanovich</title>
-    <meta name="description" content="Denis Trukhanovich">
+    <title>HTML, CSS & Git Basics</title>
+    <meta name="description" content="Denis Trukhanovich's CV">
     <meta name="author" content="SitePoint">
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
