fix: change greather then sign

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <h2 class="section-title">Code example</h2>
                 <pre class="main-code"><code id="code">String.prototype.toJadenCase = <span class="code-blue">function</span> <span class="code-yellow">()</span> <span class="code-yellow">{</span>
   <span class="code-blue">return</span> <span class="code-blue">this</span>.split<span class="code-pink">(</span><span class="code-red">"</span> <span class="code-red">"</span><span class="code-pink">)</span>.
-    map<span class="code-pink">(</span><span class="code-blue">(</span>word<span class="code-blue">)</span> <span class="code-blue">=></span> word<span class="code-blue">[</span>0<span class="code-blue">]</span>.toUpperCase<span class="code-blue">()</span>
+    map<span class="code-pink">(</span><span class="code-blue">(</span>word<span class="code-blue">)</span> <span class="code-blue">=&gt;</span> word<span class="code-blue">[</span>0<span class="code-blue">]</span>.toUpperCase<span class="code-blue">()</span>
     + word.slice<span class="code-blue">(</span>1<span class="code-blue">)</span><span class="code-pink">)</span>.join<span class="code-pink">(</span><span class="code-red">"</span> <span class="code-red">"</span><span class="code-pink">)</span>;
 <span class="code-yellow">}</span>;</code></pre>
             </section>
